Basic functions working.
To do:
- Fix date of births not appearing/saving correctly
- Optimize layouts
- Implement search functions
- Implement an expansions of current fields for multiple phone numbers
- implement emails field

--- a/app/src/main/res/layout/single_contact_view.xml
+++ b/app/src/main/res/layout/single_contact_view.xml
@@ -5,26 +5,40 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="20dp"
+    android:paddingTop="20dp"
+    android:paddingRight="20dp"
     tools:context=".MainActivity">
 
         <TextView
             android:id="@+id/Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/PhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Name" />
 
         <TextView
             android:id="@+id/Address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="30dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Name" />
+            app:layout_constraintTop_toBottomOf="@+id/PhoneNumber" />
 
         <TextView
             android:id="@+id/City"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Address" />
 
@@ -32,7 +46,24 @@
             android:id="@+id/Age"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/City" />
+
+        <Button
+            android:id="@+id/back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Age" />
+
+        <Button
+            android:id="@+id/edit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit"
+            app:layout_constraintStart_toEndOf="@+id/back_btn"
+            app:layout_constraintTop_toBottomOf="@+id/Age" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
