--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:alpha="1"
     android:background="#00FFFFFF"
     android:backgroundTint="#00FFFFFF"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
         <androidx.appcompat.widget.Toolbar
@@ -37,6 +38,7 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/add"
                     android:tint="#00BCD4"
+                    android:layout_marginEnd="20dp"
                     tools:layout_editor_absoluteX="102dp"
                     tools:layout_editor_absoluteY="6dp" />
         </androidx.appcompat.widget.Toolbar>
@@ -49,6 +51,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            android:paddingTop="44dp"
             app:layout_constraintTop_toBottomOf="@+id/my_toolbar"></androidx.recyclerview.widget.RecyclerView>
 
         <!--    <EditText-->
@@ -148,4 +151,4 @@
         <!--        android:textSize="12dp"-->
         <!--        app:layout_constraintStart_toStartOf="parent"-->
         <!--        app:layout_constraintTop_toBottomOf="@+id/save_btn" />-->
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
