--- a/app/src/main/res/layout/add_contact_layout.xml
+++ b/app/src/main/res/layout/add_contact_layout.xml
@@ -9,7 +9,7 @@
     android:paddingTop="10dp"
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="40dp">
 
     <TextView
         android:id="@+id/title"
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Age"
+        android:hint="mm/dd/yyyy"
         android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
@@ -112,5 +112,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+
+    <Button
+        android:id="@+id/delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:textColor="#8C0000"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/back_btn_add_contact_activity"
+        app:layout_constraintTop_toBottomOf="@+id/age_input" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
