--- a/app/src/main/res/layout/single_contact_view.xml
+++ b/app/src/main/res/layout/single_contact_view.xml
@@ -15,7 +15,7 @@
             android:id="@+id/linearLayout1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_bg"
             android:orientation="vertical"
             android:padding="20dp"
@@ -34,7 +34,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_bg"
             android:orientation="vertical"
             android:padding="20dp"
@@ -53,7 +53,7 @@
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_bg"
             android:orientation="vertical"
             android:padding="20dp"
@@ -64,23 +64,10 @@
                     android:id="@+id/Address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
+                    android:layout_marginStart="0dp"
                     android:textSize="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/rounded_bg"
-            android:orientation="vertical"
-            android:padding="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-            tools:layout_editor_absoluteX="20dp">
-
                 <TextView
                     android:id="@+id/City"
                     android:layout_width="match_parent"
@@ -115,6 +102,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:padding="0dp"
+            android:paddingBottom="30dp"
             tools:layout_editor_absoluteX="20dp"
             tools:layout_editor_absoluteY="20dp">
 
@@ -122,7 +110,10 @@
                     android:id="@+id/back_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_bg"
+                    android:layout_marginEnd="20dp"
                     android:text="Back"
+                    android:layout_marginBottom="20dp"
                     app:layout_constraintStart_toEndOf="@+id/edit_btn"
                     app:layout_constraintTop_toBottomOf="@+id/Age" />
 
@@ -130,7 +121,9 @@
                     android:id="@+id/edit_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_bg"
                     android:text="Edit"
+                    android:layout_marginBottom="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/Age" />
         </LinearLayout>
